infra/k8s-dev/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      initContainers: # wait for the mongodb to respond before starting pods
        - name: init-db
          image: busybox
          command:
            [
              "sh",
              "-c",
              "until nc -z orders-mongo-srv:27017; do echo waiting for orders-mongo-srv; sleep 2; done;",
            ]
      containers:
        - name: orders
          image: registry.gitlab.com/microservice_example/ticketing/orders
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/orders/healthz
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
