infra/k8s-dev/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "api/payments/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: payments
          image: petegross/payments:dev
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/payments/healthz
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
